WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145910
Fix unused private field warning in ResourceHandleSoup.cpp
https://bugs.webkit.org/show_bug.cgi?id=145910
Summary
Fix unused private field warning in ResourceHandleSoup.cpp
Csaba Osztrogonác
Reported
2015-06-12 02:47:41 PDT
../../Source/WebCore/platform/network/soup/ResourceHandleSoup.cpp:189:18: warning: private field 'm_session' is not used [-Wunused-private-field] SoupSession* m_session; m_session i only used if !SOUP_CHECK_VERSION(2, 49, 91), so the declaration and the member initialization should be guarded too.
Attachments
Patch
(1.68 KB, patch)
2015-06-12 02:48 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
Patch
(1.83 KB, patch)
2015-06-12 03:35 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2015-06-12 02:48:29 PDT
Created
attachment 254783
[details]
Patch
Csaba Osztrogonác
Comment 2
2015-06-12 03:35:53 PDT
Created
attachment 254787
[details]
Patch
WebKit Commit Bot
Comment 3
2015-06-12 10:00:02 PDT
Comment on
attachment 254787
[details]
Patch Clearing flags on attachment: 254787 Committed
r185510
: <
http://trac.webkit.org/changeset/185510
>
WebKit Commit Bot
Comment 4
2015-06-12 10:00:06 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug