Fix unused private field warning in ResourceHandleSoup.cpp https://bugs.webkit.org/show_bug.cgi?id=145910

Reviewed by Darin Adler.

* platform/network/soup/ResourceHandleSoup.cpp:


Canonical link: https://commits.webkit.org/163975@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185510 268f45cc-cd09-0410-ab3c-d52691b4dbfc